--- a/_sass/layouts/_page.scss
+++ b/_sass/layouts/_page.scss
@@ -10,6 +10,7 @@
   .site-max-width {
     > div {
       margin-bottom: 20px;
+      
     }
   }
 }
@@ -25,5 +26,9 @@
     .page-content-custom {
       
     }
+  }
+
+  .index-max-width {
+    
   }
 }
