--- a/_sass/modules/_vars.scss
+++ b/_sass/modules/_vars.scss
@@ -1,6 +1,9 @@
 // Site
 $site-max-width: 960px;
 
+//Index
+$index-max-width: 100px;
+
 // Header
 $header-height: 64px;
 $header-line-height: 64px;
