--- a/_sass/pages/_index.scss
+++ b/_sass/pages/_index.scss
@@ -3,8 +3,10 @@
   padding: 100px 0 120px 0;
 
   .index-header-section {
+    width: 70%;
+    margin: auto;
+    display: block;
     color: $index-header-fnt-color;
-    display: inline-block;
     vertical-align: top;
     text-align: center;
     font-family: Verdana;
@@ -20,8 +22,7 @@
     }
 
     .index-header-section-h1-sub {
-      font-size: 21px;
-      font-weight: 400;
+      font-size: 19px;
       margin-bottom: 50px;
     }
 
@@ -33,7 +34,7 @@
       text-align: center;
       text-decoration: none;
       display: inline-block;
-      font-size: 16px;
+      font-size: 14px;
       font-family: Verdana;
       font-weight: bold;
       margin-right: 5px;
@@ -112,12 +113,12 @@
 }
 
 .index-content-a {
-  background: url('/assets/contest_images/index_photo.jpg') no-repeat center center;
+  background: url('/assets/contest_images/index_photo_dark.jpg') no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  height: 500px;
+  height: 510px;
   margin-top: -535px;
   
 
